Updated Mongodb atlas link

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV=development 
 FRONTEND_URL=http://localhost:3000
+DB_CONNECTION_STRING=mongodb+srv://shakyab:mongodb12345@cluster0.hlzwjot.mongodb.net/?retryWrites=true&w=majority
