--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development 
 FRONTEND_URL=http://localhost:3000
-REACT_APP_DB_CONNECTION_STRING=mongodb+srv://shakyab:mongodb12345@cluster0.hlzwjot.mongodb.net/?retryWrites=true&w=majority
+REACT_APP_DB_CONNECTION_STRING=mongodb+srv://shakyab:mongodb12345@cluster0.hlzwjot.mongodb.net/kanbas-cs5610-fa23?retryWrites=true&w=majority
